Felles BOM + snyk scan.